--- a/templates/app1/cash_in_hand.html
+++ b/templates/app1/cash_in_hand.html
@@ -21,7 +21,10 @@
             </div>
             
         </div>
-        <div class="col-md-3 mt-4" style="margin-left: 1000px;">
+        <div class="col-md-4 mt-5" style="margin-left: 900px;">
+            <button type="button" class="btn btn-outline-info dropdown-toggle text-grey"
+                                    data-toggle="dropdown">Filter by
+                            </button>
             <button type="button" class="btn btn-outline-info  text-grey"><a href="{% url 'cash_statement' %}">STATEMENT</a>
             </button>
             <button type="button" class="btn btn-outline-info text-grey" >
