--- a/templates/app1/cash_statement.html
+++ b/templates/app1/cash_statement.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.debug.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js" ></script>
    
+
     <style>
         #div1{
             width: 33.33%;
@@ -251,12 +252,22 @@
                 <div class="card-title">
                     <center><h2 class="mb-0">CASH STATEMENT</h2></center>
                     <hr>
-                    <div class="right">
-                        <button class="btn toPDF btn-outline-info">pdf</button>
+                    <div class="right" style="display: flex; align-items: center;">
+                        <button class="btn toPDF btn-outline-info">pdf</button>&nbsp;
                         <button class="btn btn_print btn-outline-info" onclick="printSection('whatToPrint')">Print</button>
-
-                        <button class=" btn btn-outline-info"  onclick="shareContent()">Share</button>
+                    
+                        <li class="nav-item dropdown mb-3" style="list-style: none; margin-top: 5px;"> <!-- Adjust margin-top as needed -->
+                            <a class="nav-link dropdown-toggle text-light btn btn-outline-info btn-sm mx-1" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="align-self: flex-start;"> <!-- Added align-self -->
+                                <i class="fa fa-share-alt  " style="font-size: medium;"> Share</i> 
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item fa fa-email">&nbsp;{% send_email object.title "New:{{object.title}}" object_or_url "Email" %}</a>
+                                <a class="dropdown-item" href="">&nbsp;{% post_to_whatsapp object_or_url "Whatsapp" %}</a>
+                            </div>
+                        </li>
                     </div>
+                    
                 </div>
                 
                 
@@ -266,7 +277,7 @@
         </div>
     
         <div id="whatToPrint">
-                <div class="my-5 page" size="A4" >
+                <div class="my-5 page" size="A4"  >
                     <div class="p-5">
                         <div id="ember2512" class="tooltip-container ember-view ribbon text-ellipsis">
                             <div class="ribbon-inner ribbon-open">Statement<!----></div></div>
@@ -288,7 +299,7 @@
                                 <div class="row bb pb-3">
                                     
                                     <div class="col-6">
-                                        <h5>{{cmp1.cname }}</h5>
+                                        <h5 >{{cmp1.cname }}</h5>
                                         <p class="address "> {{cmp1.caddress}}<br>
                                             {{cmp1.city}},
                                             {{cmp1.state}}<br>
@@ -332,6 +343,7 @@
                                         
                                         <!-- <th>DESCRIPTION</th> -->
                                         <th>AMOUNT</th>
+                                        <th>BALANCE</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -350,30 +362,32 @@
                                             
                                             <!-- <td>{{a.cash_description}}</td> -->
                                             {% if a.cash_adjust == 'ADD CASH' %}
-                                            <td>+ {{a.cash_cash}}</td>
+                                            <td> {{a.cash_cash}}</td>
                                             {% elif a.cash_adjust == 'REDUCE CASH' %}
                                             <td>- {{a.cash_cash}}</td>
+                                            
                                             {% endif %}
-
+                                            <td>{{a.balance}}</td>
                                 {% endif %}
+                                
                                         </tr>
                                        
                                         <div class="modal fade" id="deleteModal{{ a.id }}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
                                          
                                             
                                      {% endfor %}
-                                     {% for a in pordr %}  
+                                     <!-- {% for a in pordr %}  
                                      <tr>
                                         
                                         <td>{{a.date}}</td>
                                         <td>PURCHASE ORDER</td>
                                         <td>{{a.vendor_name}}</td>
-                                        <td>{{a.grand_total}}</td>
+                                        <td>-{{a.grand_total}}</td>
                                         
                                         
                                     </tr>
-                                    {% endfor %} 
-                                    {% for a in sordr %}
+                                    {% endfor %}  -->
+                                    <!-- {% for a in sordr %}
                                     <tr>
                                         
                                         <td>{{a.saledate}}</td>
@@ -383,7 +397,7 @@
                                         
                                          
                                     </tr>
-                                    {% endfor %}
+                                    {% endfor %} -->
                                     <!-- <tr>
                                         {% for a in empln %}
                                         <td>{{a.LoanDate}}</td>
@@ -401,7 +415,7 @@
                                         </td>
                                         {% endfor %} 
                                     </tr> -->
-                                    {% for a in payrec %}
+                                    <!-- {% for a in payrec %}
                                     <tr>
                                         
                                         <td>{{a.paymdate}}</td>
@@ -411,15 +425,15 @@
                                       
                                         
                                     </tr>
-                                    {% endfor %}
+                                    {% endfor %} -->
                                     {% for a in bill %}
                                     <tr>
                                         
                                         <td>{{a.date}}</td>
                                         <td>BILL</td>
                                         <td>{{a.vendor_name}}</td>
+                                        <td>-{{a.paid_amount}}</td>
                                         <td>{{a.balance_amount}}</td>
-                                        
                                         
                                     </tr>
                                     {% endfor %} 
@@ -429,8 +443,8 @@
                                         <td>{{a.debitdate}}</td>
                                         <td>DEBIT NOTE</td>
                                         <td>{{a.vendor}}</td>
+                                        <td>{{a.paid_amount}}</td>
                                         <td>{{a.balance_amount}}</td>
-                                       
                                        
                                     </tr>
                                     {% endfor %} 
@@ -440,6 +454,7 @@
                                         <td>{{a.start_date}}</td>
                                         <td>RECURRING BILL</td>
                                         <td>{{a.vendor_name}}</td>
+                                        <td>-{{a.grand_total}}</td>
                                         <td>{{a.balance}}</td>
                                        
                                         
@@ -454,7 +469,7 @@
                             <td>{{i.type}}</td>
                             <!-- <td>{{i.loan_desc}}</td> -->
                             <td>{{i.loan_amount}}</td>
-                          
+                            <td>{{i.total}}</td>
                         </tr>
                         {% endfor %}
                         {% for i in getloan %}
@@ -465,7 +480,7 @@
                             <td>{{i.type}}</td>
                             <!-- <td>{{i.loan_desc}}</td> -->
                             <td>{{i.loan_amount}}</td>
-                            
+                            <td>{{i.total}}</td>
                         </tr>
                         {% endfor %}
                                   
@@ -601,5 +616,6 @@ $(document).ready(function () {
     window.location.reload();
 }
 </script>
+
     {% endif %}
     {% endblock %}
