--- a/templates/app1/cash_in_hand.html
+++ b/templates/app1/cash_in_hand.html
@@ -350,7 +350,7 @@
                         <td>{{a.debitdate}}</td>
                         <td>DEBIT NOTE</td>
                         <td>{{a.vendor}}</td>
-                        <td>{{a.paid_amount}}</td>
+                        <td>{{a.grandtotal}}</td>
                         <td>
                             <div class="dropdown">
                                 <i class="fa fa-ellipsis-v" style="font-size:24px" data-toggle="dropdown"></i>
