--- a/templates/app1/cash_in_hand.html
+++ b/templates/app1/cash_in_hand.html
@@ -325,7 +325,7 @@
                         
                     </tr>
                     {% endfor %} -->
-                    {% for a in bill %}
+                    <!-- {% for a in bill %}
                     <tr>
                         
                         <td>{{a.date}}</td>
@@ -381,7 +381,7 @@
                         </td>
                         
                     </tr>
-                    {% endfor %} 
+                    {% endfor %}  -->
                     </tbody>
                 </table>
             </div>
