--- a/templates/app1/cash_in_hand.html
+++ b/templates/app1/cash_in_hand.html
@@ -127,7 +127,13 @@
                             <td>{{i.bank_type}}</td>
                             <td>{{i.type}}</td>
                             <!-- <td>{{i.loan_desc}}</td> -->
-                            <td>{{i.loan_amount}}</td>
+                            <td>
+                                {% if i.bank_type == "EMI PAID" %}
+                                    -{{ i.loan_amount }}
+                                {% else %}
+                                    {{ i.loan_amount }}
+                                {% endif %}
+                            </td>
                             <td>
                                 <div class="dropdown">
                                     <i class="fa fa-ellipsis-v" style="font-size:24px" data-toggle="dropdown"></i>
@@ -146,7 +152,13 @@
                             <td>{{i.bank_type}}</td>
                             <td>{{i.type}}</td>
                             <!-- <td>{{i.loan_desc}}</td> -->
-                            <td>{{i.loan_amount}}</td>
+                            <td>
+                                {% if i.bank_type == "EMI PAID" %}
+                                    -{{ i.loan_amount }}
+                                {% else %}
+                                    {{ i.loan_amount }}
+                                {% endif %}
+                            </td>
                             <td>
                                 <div class="dropdown">
                                     <i class="fa fa-ellipsis-v" style="font-size:24px" data-toggle="dropdown"></i>
