--- a/templates/app1/loan_statement.html
+++ b/templates/app1/loan_statement.html
@@ -367,7 +367,7 @@
                                     </div>
                                     <div class="col-3">
                                         <p> Balance</p>
-                                        <h5>{{cmp1.cash}}</h5>
+                                        <h5>{{loan.balance}}</h5>
                                         
                                     </div>
                               
