--- a/templates/app1/cash_statement.html
+++ b/templates/app1/cash_statement.html
@@ -451,7 +451,7 @@
                                         
                                     </tr>
                                     {% endfor %} -->
-                                    {% for a in bill %}
+                                    <!-- {% for a in bill %}
                                     <tr>
                                         
                                         <td>{{a.date}}</td>
@@ -484,7 +484,7 @@
                                        
                                         
                                     </tr>
-                                    {% endfor %} 
+                                    {% endfor %}  -->
                                   
                                     {% for i in toloan %}
                         <tr>
