--- a/templates/app1/loan_statement.html
+++ b/templates/app1/loan_statement.html
@@ -321,6 +321,48 @@
                 }
 
             </style>
+            <style>
+              @media print {
+    body {
+        background-color: white;
+    }
+
+    .page {
+        box-shadow: none;
+        border: 1px solid #ccc;
+        margin: 0;
+        padding: 20px;
+    }
+
+    /* Adjust font size for print */
+    h2, h5 {
+        font-size: 18px;
+    }
+
+    /* Remove unnecessary elements for print */
+    .btn-group, .dropdown, .fa-print {
+        display: none;
+    }
+
+    /* Adjust table styles for print */
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 10px;
+        padding-left: 130px;
+    }
+
+    th, td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+    }
+    .ribbon-open{
+        visibility: hidden;
+    }
+    /* Adjust other styles as needed */
+}
+            </style>
                 <div class="my-5 page" size="A4"  >
                     <div class="p-5">
                         <div id="ember2512" class="tooltip-container ember-view ribbon text-ellipsis">
